1st commit: hero and 1st post update

--- a/content/posts/1.this-is-our-first-post.md
+++ b/content/posts/1.this-is-our-first-post.md
@@ -1,32 +1,23 @@
 ---
-title: First post in the changelog
-date: July 07, 2022
+title: Systems Analyst
+date: Since September, 2021
 authors:
   - {
-      name: Fayaz Ahmed,
+      name: Juliana Martinez,
       avatar: https://www.thispersondoesnotexist.com/image?random=1234,
     }
-  - { name: Jane Doe, avatar: https://www.thispersondoesnotexist.com/image }
-version: "1.03"
+version: "Currently"
 ---
 
-Thrilled to announce the launch of [logspot](https://github.com/fayazara/logspot)!
+I currently work as a Systems Analyst at the pension and insurance company [Brasilprev](https://www.linkedin.com/company/brasilprev/)!
 
-![logspot-banner](/logspot-banner.png)
+![logo-brasilprev](/logo-brasilprev.png)
 
-Logspot is a lightweight, free and open source template for your changelog made with [Vue](https://vuejs.com), [Nuxt](https://nuxtjs.org) and [Tailwindcss](https://tailwindcss.com). It leverages [Nuxt Content] for your feed which allows you to write markdown and use them as a CMS. It has a beautiful UI and is easy to use.
+HERE GOES THE DESCRIPTION.
 
-### Features
+### Skills
 
-- Dark mode
-- Markdown support
-- RSS feed
-- Search
-- Themeable
-- Document driven mode
-- Access to over 100,000 icons with [Iconify](https://fontawesome.com)
-- Code highlighting with [Prism](https://prismjs.com)
-- Completely static
-- Use your own logo
-- Use your own favicon
-- Frontmatter support (Dates, Authors and other metadata)
+- Java
+- Spring Boot
+- PL/SQL
+- Oracle SQL, SQL Server & MySQL
