1st commit: personalization

--- a/content/posts/2.code-blocks.md
+++ b/content/posts/2.code-blocks.md
@@ -1,17 +1,12 @@
 ---
-title: Code Block Syntax highlighting
-date: July 06, 2022
+title: Generation Brasil
+date: May, 2021
 authors:
   - {
-      name: Fayaz Ahmed,
+      name: Juliana Martinez,
       avatar: https://www.thispersondoesnotexist.com/image?random=12dsf34,
     }
-  - { name: Jane Doe, avatar: https://www.thispersondoesnotexist.com/image }
-  - {
-      name: John Doe,
-      avatar: https://www.thispersondoesnotexist.com/image?random=1234fds23,
-    }
-version: "1.02"
+version: "Bootcamp"
 ---
 
 Logspot also supports code syntax highlighting as well
