2nd commit: rezise profile-pic + description Generation

--- a/content/posts/2.code-blocks.md
+++ b/content/posts/2.code-blocks.md
@@ -9,9 +9,9 @@ authors:
 version: "Bootcamp"
 ---
 
-Logspot also supports code syntax highlighting as well
+DESCRIPTION FOR HOW IT WAS DURING THE GENERATION BOOTCAMP.
 
-![codeblocks](/codeblocks.png)
+INSERIR AQUI ALGUM EXEMPLO DE CÓDIGO RELACIONADO AO QUE FIZEMOS NA GENERATION 
 
 ```js{1,3-5}[server.js]
 // Javascript
@@ -22,19 +22,15 @@ async function fetchPosts() {
 }
 ```
 
-Currently this is only supported for the following languages, to keep the bundle small for this demo.
+List the habilities learned from the bootcamp
 
-- JavaScript
-- CSS
-- HTML
-- Markdown
-- TypeScript
-- Vue
-- Python
-- Ruby
+- Java
+- Typescript
+- Javascript
+- MySQL
+- Angular
+- Spring Boot
 
-You can always add your own languages to the `highlight` array in the `nuxt.config.js` file.
+Formatação interessante para ser utilizada -> `highlight` + `nuxt.config.js`.
 
-Support for inline code blocks is also available example `const name = "John Doe"`{lang="js"}
-
-Shiki also supports different themes for codeblocks, you can learn mode about them [here](https://content.nuxtjs.org/api/configuration/#highlight)
+Exemplo bom para ser utilizado: `const name = "John Doe"`{lang="js"}
